@@ -1,3 +1,8 @@
+2007-09-04  Stef Walter  <stef@memberwebs.com>
+
+	* src/seahorse-gkeyring-item.c: Fix problem when building without
+	SSH support. 
+
 2007-09-04  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* plugins/applet/docs/Makefile.am: Added "it" (Italian) to
